unpackaged/main/default/objects/CreditMemoLine/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>