unpackaged/main/default/objects/CreditMemoLine/fields/ReturnOrderLineItem__c.field-meta.xml
<CustomField>
    <fullName>ReturnOrderLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Order Line Item</label>
    <referenceTo>ReturnOrderLineItem</referenceTo>
    <relationshipLabel>Credit Memo Lines</relationshipLabel>
    <relationshipName>Credit_Memo_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>