unpackaged/main/default/objects/CreditMemoLine/fields/ReturnOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ReturnOrderNumber__c</fullName>
    <formula>CreditMemo.ReturnOrder__r.ReturnOrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Order Number</label>
    <type>Text</type>
</CustomField>